# binary_metrics_data

./: README.md  pyproject.toml
data/: predictions.json
fake_classification_data/: __init__.py  generate.py
